@@ -6,23 +6,30 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.1.4.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
     <groupId>com.gmail.erofeev.st.alexei.onlinemarket</groupId>
     <artifactId>spring-boot-module</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>spring-boot-module</name>
-    <description>Demo project for Spring Boot</description>
+    <description>Online market</description>
 
     <properties>
         <java.version>1.8</java.version>
         <project.version>0.0.1-SNAPSHOT</project.version>
         <spring.security.test.version>5.1.4.RELEASE</spring.security.test.version>
         <tl.springsecurity.version>3.0.4.RELEASE</tl.springsecurity.version>
+        <commons.fileupload.version>1.3.3</commons.fileupload.version>
+        <maven-surefire.version>2.18.1</maven-surefire.version>
     </properties>
 
     <dependencies>
 
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>${commons.fileupload.version}</version>
+        </dependency>
         <dependency>
             <groupId>com.gmail.erofeev.st.alexei.onlinemarket</groupId>
             <artifactId>service-module</artifactId>
@@ -91,6 +98,17 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire.version}</version>
+                <configuration>
+                    <forkCount>1</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                </configuration>
+            </plugin>
+
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
